Initial structure from spike02
git-svn-id: file:///home/adamm/dist/mifos_mirror/cheetah/trunk@13625 a8845c50-7012-0410-95d3-8e1449b9b1e4

--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>springapp2</name>
+	<name>springapp3</name>
 	<comment></comment>
 	<projects>
 	</projects>
@@ -46,6 +46,11 @@
 		</buildCommand>
 		<buildCommand>
 			<name>edu.umd.cs.findbugs.plugin.eclipse.findbugsBuilder</name>
+			<arguments>
+			</arguments>
+		</buildCommand>
+		<buildCommand>
+			<name>org.maven.ide.eclipse.maven2Builder</name>
 			<arguments>
 			</arguments>
 		</buildCommand>
