--- a/.classpath
+++ b/.classpath
@@ -1,9 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="src" path="src/main/java"/>
-	<classpathentry kind="src" output="target/springapp2/WEB-INF/freemarker" path="src/main/webapp/WEB-INF/freemarker"/>
-	<classpathentry kind="src" output="target/test-classes" path="src/test/java"/>
-	<classpathentry excluding="**" kind="src" path="src/main/resources"/>
+	<classpathentry kind="src" output="application/target/springapp3/WEB-INF/classes" path="application/src/main/java"/>
+	<classpathentry kind="src" output="testing/target/test-classes" path="testing/src/test/resources"/>
+	<classpathentry kind="src" output="testing/target/test-classes" path="testing/src/test/java"/>
+	<classpathentry kind="src" output="application/target/test-classes" path="application/src/test/java"/>
+	<classpathentry excluding="**" kind="src" output="application/target/springapp3/WEB-INF/classes" path="application/src/main/resources"/>
+	<classpathentry excluding="**" kind="src" output="application/target/test-classes" path="application/src/test/resources"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.web.container"/>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.module.container"/>
 	<classpathentry kind="con" path="org.maven.ide.eclipse.MAVEN2_CLASSPATH_CONTAINER">
@@ -11,6 +14,5 @@
 			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="output" path="target/springapp2/WEB-INF/classes"/>
+	<classpathentry kind="output" path="target/classes"/>
 </classpath>
