Some initial renaming for Cheetah.
git-svn-id: file:///home/adamm/dist/mifos_mirror/cheetah/trunk@13630 a8845c50-7012-0410-95d3-8e1449b9b1e4

--- a/pom.xml
+++ b/pom.xml
@@ -2,10 +2,10 @@
    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>org.mifos</groupId>
-   <artifactId>springapp3-parent</artifactId>
+   <artifactId>cheetah-parent</artifactId>
    <packaging>pom</packaging>
    <version>0.0.3-SNAPSHOT</version>
-   <name>Mifos - Springapp3 parent</name>
+   <name>Mifos - Cheetah parent</name>
    <url>http://www.mifos.org</url>
     
    <modules>
