--- a/application/src/main/resources/jdbc.properties
+++ b/application/src/main/resources/jdbc.properties
@@ -1,4 +1,4 @@
 jdbc.driverClassName=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://localhost:3306/springapp
+jdbc.url=jdbc:mysql://localhost:3306/mifos_cheetah
 jdbc.username=root
 jdbc.password=mysql
