--- a/application/src/main/resources/log4j.properties
+++ b/application/src/main/resources/log4j.properties
@@ -7,7 +7,7 @@ log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
 log4j.appender.stdout.layout.ConversionPattern=%d %p [%c] - <%m>%n
 
 log4j.appender.logfile=org.apache.log4j.RollingFileAppender
-log4j.appender.logfile.File=${springapp.root}/WEB-INF/springapp.log
+log4j.appender.logfile.File=${mifos.root}/WEB-INF/mifos.log
 log4j.appender.logfile.MaxFileSize=512KB
 # Keep 10 backup files.
 log4j.appender.logfile.MaxBackupIndex=10
