--- a/application/src/main/webapp/WEB-INF/web.xml
+++ b/application/src/main/webapp/WEB-INF/web.xml
@@ -53,23 +53,23 @@
 	</filter-mapping>
 
   <servlet>
-    <servlet-name>springapp</servlet-name>
+    <servlet-name>mifos</servlet-name>
     <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
     <load-on-startup>1</load-on-startup>
   </servlet>
 
   <servlet-mapping>
-    <servlet-name>springapp</servlet-name>
+    <servlet-name>mifos</servlet-name>
     <url-pattern>*.ftl</url-pattern>
   </servlet-mapping>
 
   <servlet-mapping>
-    <servlet-name>springapp</servlet-name>
+    <servlet-name>mifos</servlet-name>
     <url-pattern>*.ftl</url-pattern>
   </servlet-mapping>
 
   <servlet-mapping>
-    <servlet-name>springapp</servlet-name>
+    <servlet-name>mifos</servlet-name>
     <url-pattern>/</url-pattern>
   </servlet-mapping>
 
