--- a/application/pom.xml
+++ b/application/pom.xml
@@ -12,6 +12,34 @@
      <artifactId>cheetah-parent</artifactId>
      <version>0.0.3-SNAPSHOT</version>
    </parent>
+   <properties>
+      <database.properties.file>${basedir}/src/main/resources/jdbc.properties</database.properties.file>
+   </properties>
+   <profiles>
+      <profile>
+         <id>continuous-integration</id>
+         <properties>
+            <continuous.integration.resources.dir>${basedir}/../resources/continuous-integration</continuous.integration.resources.dir>
+            <database.properties.file>${continuous.integration.resources.dir}/jdbc.local.properties</database.properties.file>
+         </properties>
+         <activation>
+            <activeByDefault>false</activeByDefault>
+         </activation>
+         <build>
+            <plugins>
+               <plugin>
+                  <groupId>org.apache.maven.plugins</groupId>
+                  <artifactId>maven-surefire-plugin</artifactId>
+                  <configuration>         
+                     <additionalClasspathElements>
+                        <additionalClasspathElement>${continuous.integration.resources.dir}</additionalClasspathElement>
+                     </additionalClasspathElements>
+                  </configuration>
+               </plugin>
+            </plugins>
+         </build>
+      </profile>
+   </profiles>   
    <repositories>
       <repository>
          <id>spring-snapshot</id>
@@ -154,7 +182,35 @@
       <testSourceDirectory>${basedir}/src/test/java</testSourceDirectory>
       <outputDirectory>${basedir}/target/cheetah/WEB-INF/classes</outputDirectory>
       <testOutputDirectory>${basedir}/target/test-classes</testOutputDirectory>
+      <resources>
+         <resource>
+           <directory>sql</directory>
+           <filtering>true</filtering>
+           <targetPath>sql</targetPath>
+         </resource>
+         <resource>
+           <directory>src/main/resources</directory>
+         </resource>
+      </resources>      
       <plugins>
+         <plugin>
+           <groupId>org.codehaus.mojo</groupId>
+           <artifactId>properties-maven-plugin</artifactId>
+           <version>1.0-SNAPSHOT</version>
+           <executions>
+             <execution>
+               <phase>initialize</phase>
+               <goals>
+                 <goal>read-project-properties</goal>
+               </goals>
+               <configuration>
+                 <files>
+                   <file>${database.properties.file}</file>
+                 </files>
+               </configuration>
+             </execution>
+           </executions>
+         </plugin>
          <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-compiler-plugin</artifactId>
@@ -237,11 +293,11 @@
                <password>mysql</password>
                <autocommit>true</autocommit>
                <srcFiles>
-                  <srcFile>sql/create_database.sql</srcFile>
-                  <srcFile>sql/create_products.sql</srcFile>
-                  <srcFile>sql/create_security.sql</srcFile>
-                  <srcFile>sql/security_data.sql</srcFile>
-                  <srcFile>sql/product_data.sql</srcFile>
+                  <srcFile>${project.build.outputDirectory}/sql/create_database.sql</srcFile>
+                  <srcFile>${project.build.outputDirectory}/sql/create_products.sql</srcFile>
+                  <srcFile>${project.build.outputDirectory}/sql/create_security.sql</srcFile>
+                  <srcFile>${project.build.outputDirectory}/sql/security_data.sql</srcFile>
+                  <srcFile>${project.build.outputDirectory}/sql/product_data.sql</srcFile>
                </srcFiles>
             </configuration>
          </plugin>
