--- a/application/src/main/resources/jdbc.properties
+++ b/application/src/main/resources/jdbc.properties
@@ -1,4 +1,5 @@
+jdbc.database=mifos_cheetah
 jdbc.driverClassName=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://localhost:3306/mifos_cheetah
+jdbc.url=jdbc:mysql://localhost:3306/${jdbc.database}
 jdbc.username=root
 jdbc.password=mysql
