work in progress on cargo deploy war to a locally installed container
git-svn-id: file:///home/adamm/dist/mifos_mirror/cheetah/trunk@13649 a8845c50-7012-0410-95d3-8e1449b9b1e4

--- a/testing/pom.xml
+++ b/testing/pom.xml
@@ -25,6 +25,9 @@
          <activation>
             <activeByDefault>true</activeByDefault>
          </activation>
+         <properties>
+            <tomcat.home.directory>${cargo.install.directory}/${container.name}/tomcat-${tomcat.version}/tomcat-${tomcat.version}/</tomcat.home.directory>
+         </properties>
          <build>
             <plugins>
                <plugin>
@@ -49,6 +52,9 @@
          <activation>
             <activeByDefault>false</activeByDefault>
          </activation>
+         <properties>
+            <tomcat.home.directory>/Users/adam/work/mifos/deploy/apache-tomcat-6.0.18-cargo</tomcat.home.directory>
+         </properties>
          <build>
             <plugins>
                <plugin>
@@ -75,7 +81,6 @@
             <container.name>tomcat6x</container.name>
             <container.url>http://www.apache.org/dist/tomcat/tomcat-6/v${tomcat.version}/bin/apache-tomcat-${tomcat.version}.zip</container.url>
             <tomcat.version>6.0.18</tomcat.version>
-            <tomcat.home.directory>${cargo.install.directory}/${container.name}/tomcat-${tomcat.version}/tomcat-${tomcat.version}/</tomcat.home.directory>
             <war.target>${tomcat.home.directory}/webapps</war.target>
          </properties>
          <build>
