--- a/testing/pom.xml
+++ b/testing/pom.xml
@@ -52,9 +52,6 @@
          <activation>
             <activeByDefault>false</activeByDefault>
          </activation>
-         <properties>
-            <tomcat.home.directory>/Users/adam/work/mifos/deploy/apache-tomcat-6.0.18-cargo</tomcat.home.directory>
-         </properties>
          <build>
             <plugins>
                <plugin>
@@ -62,9 +59,14 @@
                   <artifactId>cargo-maven2-plugin</artifactId>
                   <version>1.0-SNAPSHOT</version>
                   <configuration>
+                  <wait>false</wait>
                   <container>
                      <home>${tomcat.home.directory}</home>
                   </container>
+                  <configuration>
+                      <type>standalone</type>
+                      <home>${tomcat.deploy.directory}</home>
+                  </configuration>
                </configuration>
                </plugin>
             </plugins>
@@ -448,9 +450,6 @@
                   <goals>
                      <goal>start</goal>
                   </goals>
-                  <configuration>
-                     <wait>false</wait>
-                  </configuration>
                </execution>
                <execution>
                   <id>stop-container</id>
