Work in progress on Default user login story. * Added header with css based nav-bar for home page. * Added acceptance test stories in DefaultAdminUserCanLoginStoryTest (not yet passing).
git-svn-id: file:///home/adamm/dist/mifos_mirror/cheetah/trunk@13659 a8845c50-7012-0410-95d3-8e1449b9b1e4

--- a/application/pom.xml
+++ b/application/pom.xml
@@ -184,12 +184,12 @@
       </dependency>
    </dependencies>
    <build>
-      <finalName>cheetah</finalName>
+      <finalName>mifos</finalName>
       <defaultGoal>war:war</defaultGoal>
       <sourceDirectory>${basedir}/src/main/java</sourceDirectory>
       <scriptSourceDirectory>${basedir}/src/main/scripts</scriptSourceDirectory>
       <testSourceDirectory>${basedir}/src/test/java</testSourceDirectory>
-      <outputDirectory>${basedir}/target/cheetah/WEB-INF/classes</outputDirectory>
+      <outputDirectory>${basedir}/target/mifos/WEB-INF/classes</outputDirectory>
       <testOutputDirectory>${basedir}/target/test-classes</testOutputDirectory>
       <resources>
          <resource>
