--- a/.classpath
+++ b/.classpath
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" output="application/target/mifos/WEB-INF/classes" path="application/src/main/java"/>
+	<classpathentry kind="src" output="application/target/mifos/css" path="application/src/main/webapp/css"/>
+	<classpathentry kind="src" output="application/target/mifos/WEB-INF/freemarker" path="application/src/main/webapp/WEB-INF/freemarker"/>
 	<classpathentry kind="src" output="testing/target/test-classes" path="testing/src/test/resources"/>
 	<classpathentry kind="src" output="testing/target/test-classes" path="testing/src/test/java"/>
 	<classpathentry kind="src" output="application/target/test-classes" path="application/src/test/java"/>
@@ -14,5 +16,5 @@
 			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="output" path="target/classes"/>
+	<classpathentry kind="output" path="application/target/mifos/WEB-INF/classes"/>
 </classpath>
